# flowl

./: README.md  pyproject.toml
examples/: cosine_embeddings.py  eight_schools.py  geometry_comparison.py  morph_interpolation.py  time_series_cost.py
src/flowl/: __init__.py  _types.py
src/flowl/backends/: __init__.py  interpolation.py  sinkhorn.py
src/flowl/core/: __init__.py  cloud.py  constraints.py  geometry.py  graph.py  space.py
src/flowl/costs/: __init__.py  hyperbolic.py
src/flowl/ops/: __init__.py  morph.py  warp.py
src/flowl/solver/: __init__.py  energy.py  jko.py  relax.py
src/flowl/tracing/: __init__.py  context.py
tests/: test_cloud.py  test_graph.py  test_solver.py  test_space_geometry.py  test_three_schools.py
